<resources>
    <string name="app_name">Sensitivity Finder</string>
    <string name="action_donate">Donate</string>
    <string name="action_author">Author</string>
    <string name="start_button">Start</string>
    <string name="continue_button">Continue</string>
    <string name="reset_button">Reset</string>
    <string name="finish_button">Finish</string>
    <string name="lowerst_number">Lowest</string>
    <string name="average_number">Average</string>
    <string name="highest_number">Highest</string>
    <string name="sens_number">360 Sens</string>

</resources>
